--- a/package.json
+++ b/package.json
@@ -2,12 +2,9 @@
   "name": "sa-charts",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "lib-dev": "ng build ng-sa-charts --watch",
+    "demo-dev": "ng serve sa-charts-demo",
+    "lib-build": "ng build ng-sa-charts --prod"
   },
   "private": true,
   "dependencies": {
@@ -29,7 +26,6 @@
     "@angular/cli": "~9.0.3",
     "@angular/compiler-cli": "~9.0.2",
     "@angular/language-service": "~9.0.2",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "codelyzer": "^5.1.2",
