--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@angular/platform-browser": "~9.0.2",
     "@angular/platform-browser-dynamic": "~9.0.2",
     "@angular/router": "~9.0.2",
+    "@types/d3": "^5.7.2",
+    "d3": "^5.15.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
@@ -25,7 +27,7 @@
     "@angular-devkit/build-ng-packagr": "~0.900.6",
     "@angular/cli": "~9.0.3",
     "@angular/compiler-cli": "~9.0.2",
-    "@angular/language-service": "~9.0.2",
+    "@angular/language-service": "^9.0.7",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "codelyzer": "^5.1.2",
