--- a/projects/ng-sa-charts/package.json
+++ b/projects/ng-sa-charts/package.json
@@ -4,6 +4,8 @@
   "peerDependencies": {
     "@angular/common": "^9.0.6",
     "@angular/core": "^9.0.6",
-    "tslib": "^1.10.0"
+    "tslib": "^1.10.0",
+    "@types/d3": "^5.7.2",
+    "d3": "^5.15.0"
   }
 }
