--- a/package.json
+++ b/package.json
@@ -1,47 +1,48 @@
 {
-  "name": "sa-charts",
-  "version": "0.0.0",
-  "scripts": {
-    "lib-dev": "ng build ng-sa-charts --watch",
-    "demo-dev": "ng serve sa-charts-demo",
-    "lib-build": "ng build ng-sa-charts --prod"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~9.0.2",
-    "@angular/common": "~9.0.2",
-    "@angular/compiler": "~9.0.2",
-    "@angular/core": "~9.0.2",
-    "@angular/forms": "~9.0.2",
-    "@angular/platform-browser": "~9.0.2",
-    "@angular/platform-browser-dynamic": "~9.0.2",
-    "@angular/router": "~9.0.2",
-    "@types/d3": "^5.7.2",
-    "d3": "^5.15.0",
-    "rxjs": "~6.5.4",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.6",
-    "@angular-devkit/build-ng-packagr": "~0.900.6",
-    "@angular/cli": "~9.0.3",
-    "@angular/compiler-cli": "~9.0.2",
-    "@angular/language-service": "^9.0.7",
-    "@types/jasmine": "~3.5.0",
-    "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^5.1.2",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.0",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
-    "ng-packagr": "^9.0.0",
-    "protractor": "~5.4.3",
-    "ts-node": "~8.3.0",
-    "tslint": "~5.18.0",
-    "typescript": "~3.7.5"
-  }
+    "name": "sa-charts",
+    "version": "0.0.0",
+    "scripts": {
+        "lib-dev": "ng build ng-sa-charts --watch",
+        "demo-dev": "ng serve sa-charts-demo",
+        "lib-build": "ng build ng-sa-charts --prod",
+        "postinstall": "ngcc"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "~9.0.2",
+        "@angular/common": "~9.0.2",
+        "@angular/compiler": "~9.0.2",
+        "@angular/core": "~9.0.2",
+        "@angular/forms": "~9.0.2",
+        "@angular/platform-browser": "~9.0.2",
+        "@angular/platform-browser-dynamic": "~9.0.2",
+        "@angular/router": "~9.0.2",
+        "@types/d3": "^5.7.2",
+        "d3": "^5.15.0",
+        "rxjs": "~6.5.4",
+        "tslib": "^1.10.0",
+        "zone.js": "~0.10.2"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "~0.900.6",
+        "@angular-devkit/build-ng-packagr": "~0.900.6",
+        "@angular/cli": "~9.0.3",
+        "@angular/compiler-cli": "~9.0.2",
+        "@angular/language-service": "^9.0.7",
+        "@types/jasmine": "~3.5.0",
+        "@types/jasminewd2": "~2.0.3",
+        "codelyzer": "^5.1.2",
+        "jasmine-core": "~3.5.0",
+        "jasmine-spec-reporter": "~4.2.1",
+        "karma": "~4.3.0",
+        "karma-chrome-launcher": "~3.1.0",
+        "karma-coverage-istanbul-reporter": "~2.1.0",
+        "karma-jasmine": "~2.0.1",
+        "karma-jasmine-html-reporter": "^1.4.2",
+        "ng-packagr": "^9.0.0",
+        "protractor": "~5.4.3",
+        "ts-node": "~8.3.0",
+        "tslint": "~5.18.0",
+        "typescript": "~3.7.5"
+    }
 }
